--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    
 </head>
 
 <body>
@@ -132,9 +133,9 @@
               <h3>Follow Us</h3>
               <ul>
                   <li><a href="https://www.linkedin.com/in/suchit-hubale-40a920256?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                  <li><a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+                  <li><a href="https://github.com/SuchitHubale" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
                 <li><a href="https://www.instagram.com/suchit_hubale_?igsh=MTZjM2Z6NjVjcWt0bg==" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                <li><a href="https://www.facebook.com/suchit.hubale" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
               </ul>
             </div>
           </div>
@@ -145,7 +146,9 @@
           </div>
         </div>
       </footer>
-    <script src="./Script.js"></script>
+    <script src="script.js"></script>
+    <div id="particles-js"></div>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>        
 </body>
 
 </html>
